[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["s2terminal"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
PuLP = "^2.5.1"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
